--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -25,13 +25,16 @@ source-repository head
 
 library
   exposed-modules:
+      Bot.Telegram
       Lib
   other-modules:
       Paths_echo_bot
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
   default-language: Haskell2010
 
 executable echo-bot-exe
@@ -42,7 +45,9 @@ executable echo-bot-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , echo-bot
   default-language: Haskell2010
 
@@ -55,6 +60,8 @@ test-suite echo-bot-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , echo-bot
   default-language: Haskell2010
