--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -35,6 +35,7 @@ library
       aeson
     , base >=4.7 && <5
     , bytestring
+    , http-conduit
   default-language: Haskell2010
 
 executable echo-bot-exe
@@ -49,6 +50,7 @@ executable echo-bot-exe
     , base >=4.7 && <5
     , bytestring
     , echo-bot
+    , http-conduit
   default-language: Haskell2010
 
 test-suite echo-bot-test
@@ -64,4 +66,5 @@ test-suite echo-bot-test
     , base >=4.7 && <5
     , bytestring
     , echo-bot
+    , http-conduit
   default-language: Haskell2010
