--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Bot.Internal.Telegram
       Bot.Telegram
       Lib
   other-modules:
@@ -32,7 +33,8 @@ library
   hs-source-dirs:
       src
   build-depends:
-      aeson
+      HUnit
+    , aeson
     , base >=4.7 && <5
     , bytestring
     , http-conduit
@@ -46,7 +48,8 @@ executable echo-bot-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
+      HUnit
+    , aeson
     , base >=4.7 && <5
     , bytestring
     , echo-bot
@@ -57,12 +60,14 @@ test-suite echo-bot-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Telegram.Test
       Paths_echo_bot
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
+      HUnit
+    , aeson
     , base >=4.7 && <5
     , bytestring
     , echo-bot
