--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -37,6 +37,7 @@ library
     , aeson
     , base >=4.7 && <5
     , bytestring
+    , http-client
     , http-conduit
   default-language: Haskell2010
 
@@ -53,6 +54,7 @@ executable echo-bot-exe
     , base >=4.7 && <5
     , bytestring
     , echo-bot
+    , http-client
     , http-conduit
   default-language: Haskell2010
 
@@ -71,5 +73,6 @@ test-suite echo-bot-test
     , base >=4.7 && <5
     , bytestring
     , echo-bot
+    , http-client
     , http-conduit
   default-language: Haskell2010
